force-app/main/default/objects/Opportunity_Inflation__c/Opportunity_Inflation__c.object-meta.xml
<CustomObject>
    <label>Opportunity Inflation</label>
    <nameField>
        <label>Inflation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Inflation Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>