force-app/main/default/objects/Opportunity_Inflation__c/fields/Build_Year_Inflation__c.field-meta.xml
<CustomField>
    <fullName>Build_Year_Inflation__c</fullName>
    <label>Build Year Inflation</label>
    <referenceTo>Margin_Assumption__c</referenceTo>
    <relationshipName>Build_Year_Inflation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>