force-app/main/default/objects/Opportunity_Inflation__c/fields/Opportunity_Line__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line__c</fullName>
    <label>Opportunity Line</label>
    <referenceTo>Opportunity_Line__c</referenceTo>
    <relationshipName>Inflation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>